--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 <div class="container_12">
+	<div id="session-area">
+		<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+	</div>
 	<div class="grid_12">
 		<div id="header">
 			<h1><a href="/">Punchy</a></h1>
