--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,10 @@
 body {
-	font-family: Arial, “Helvetica Neue”, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	color: #202020;
+}
+
+#session-area{
+	float: right;
 }
 
 #header h1 a{
@@ -389,7 +393,7 @@ td.final {
     margin-right: 1em; }
   .pagination .next_page {
     margin-left: 1em; }
-    
+
 a.more_button {
 	padding: 5px;
 	display: block;
