adicionado botao de login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
 <body>
 <div class="container_12">
 	<div id="session-area">
-		<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+		<% if user_signed_in? %>
+		  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+		<% else %>
+		  <%= link_to('Login', new_user_session_path) %>
+		<% end %>
 	</div>
 	<div class="grid_12">
 		<div id="header">
