adicionado preferencias de usuarios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <div class="container_12">
 	<div id="session-area">
 		<% if user_signed_in? %>
+			<%= link_to('Preferences', edit_user_registration_path) %>
+			|
 		  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
 		<% else %>
 		  <%= link_to('Login', new_user_session_path) %>
