--- a/app/views/punches/_punch.html.erb
+++ b/app/views/punches/_punch.html.erb
@@ -2,6 +2,7 @@
 	<p>
 		<%= highlight(punch).html_safe %>
 	</p>
+  <!-- # NOTE: Inicio -->
 	<div class="date"><%= punch.created_by.present? ? punch.created_by.user_name+", " : "" %><%= punch.created_at.strftime("%a, %B %d, %Y") %></div>
   <% if user_signed_in? && current_user.id == punch.created_by_id %>
 	<div class="punch_control">
@@ -9,4 +10,5 @@
   	<%= link_to image_tag("delete.png"), punch, :confirm => 'Are you sure?', :method => :delete %>
   </div>
   <% end %>
+  <!-- # NOTE: Fim -->
 </div>
