--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container_12">
+	<!-- # NOTE: Inicio -->
 	<div id="session-area">
 		<% if user_signed_in? %>
 			<%= link_to('Preferences', edit_user_registration_path) %>
@@ -17,6 +18,7 @@
 		  <%= link_to('Login', new_user_session_path) %>
 		<% end %>
 	</div>
+	<!-- # NOTE: Fim -->
 	<div class="grid_12">
 		<div id="header">
 			<h1><a href="/">Punchy</a></h1>
