--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,3 +1,4 @@
+<!-- # NOTE: Inicio -->
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
@@ -10,3 +11,4 @@
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
+<!-- # NOTE: Fim -->
