--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<!-- # NOTE: Inicio -->
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -19,3 +20,4 @@
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
+<!-- # NOTE: Fim -->
